--- a/app/src/main/res/layout-land/activity_2.xml
+++ b/app/src/main/res/layout-land/activity_2.xml
@@ -11,7 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="invisible">
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView7"
@@ -20,7 +24,7 @@
             android:layout_gravity="bottom|center"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:background="@color/teal_200"
@@ -60,24 +64,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:background="@color/teal_200"
             android:padding="8dp"
             android:textColor="@android:color/black"
-            android:textSize="24sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/question"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="8dp"
             android:background="#03DAC5"
             android:gravity="center"
-            android:padding="8dp"
+            android:padding="4dp"
             android:textColor="#FF000000"
-            android:textSize="34sp"
+            android:textSize="28sp"
             android:textStyle="bold" />
 
         <Button
@@ -86,8 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
-            android:layout_marginTop="64dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/rounded_corners"
             android:textColor="@color/black"
             app:backgroundTint="@color/teal_200" />
@@ -99,7 +102,6 @@
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="16dp"
             android:background="@drawable/rounded_corners"
             android:textColor="@color/black"
             app:backgroundTint="@color/teal_200" />
@@ -111,7 +113,6 @@
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="16dp"
             android:background="@drawable/rounded_corners"
             android:textColor="@color/black"
             app:backgroundTint="@color/teal_200" />
@@ -136,13 +137,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:visibility="visible"
-        tools:layout_editor_absoluteY="473dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="16dp"
             android:background="@color/teal_200"
             android:gravity="center"
             android:paddingLeft="8dp"
@@ -157,19 +161,19 @@
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:background="@color/teal_200"
             android:padding="8dp"
             android:text="Instructions:"
             android:textColor="@color/black"
-            android:textSize="30sp" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/teal_200"
-            android:padding="8dp"
+            android:padding="4dp"
             android:text="1. Each Question Carries 3 Marks."
             android:textColor="@color/black"
             android:textSize="18sp" />
@@ -179,7 +183,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/teal_200"
-            android:paddingLeft="8dp"
+            android:paddingLeft="4dp"
             android:text="2. If you chose wrong answer then quiz will end and your marks will be displayed at the end."
             android:textColor="@color/black"
             android:textSize="18sp" />
@@ -189,7 +193,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/teal_200"
-            android:padding="8dp"
+            android:padding="4dp"
             android:text="3. There is no limit on the no.of questions."
             android:textColor="@color/black"
             android:textSize="18sp" />
@@ -199,9 +203,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="64dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginRight="0dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/rounded_corners"
             android:gravity="center"
             android:padding="8dp"
